@@ -10,6 +10,9 @@ What's New in Python 2.7.9?
 Core and Builtins
 -----------------
 
+- Issue #22604: Fix assertion error in debug mode when dividing a complex
+  number by (nan+0j).
+
 - Issue #22470: Fixed integer overflow issues in "backslashreplace" and
   "xmlcharrefreplace" error handlers.
 
